# domain/notificacao/Notificacao.model.js
@@ -1,10 +1,23 @@
-var SolicitacaoModel = function () { };
+const SolicitacaoModel = function () { };
 
-SolicitacaoModel.prototype.solicitarPedido = async function(msg, callback) {
-    let json = {
-        message: msg
-    };
-    callback(json);
+SolicitacaoModel.prototype.solicitarPedido = async function(obj, callback) {
+    callback(obj);
+}
+
+SolicitacaoModel.prototype.enviarOrcamento = async function(obj, callback) {
+    callback(obj);
+}
+
+SolicitacaoModel.prototype.aprovarPedido = async function(obj, callback) {
+    callback(obj);
+}
+
+SolicitacaoModel.prototype.reprovarPedido = async function(obj, callback) {
+    callback(obj);
+}
+
+SolicitacaoModel.prototype.verificarSituacaoPedido = async function(obj, callback) {
+    callback(obj);
 }
 
 module.exports = SolicitacaoModel;
